# dotenv-c

./: CMakeLists.txt  Makefile  README.md  clib.json  package.json
.github/workflows/: c-cpp.yml  test.yml
src/: dotenv.c  dotenv.h
test/: .env  .test.env  env_test.c
